[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
day_one = { path = "../day_one" }
day_two = { path = "../day_two" }
day_three = { path = "../day_three" }
day_four = { path = "../day_four" }
day_five = { path = "../day_five" }
